--- a/src/index.css
+++ b/src/index.css
@@ -48,14 +48,6 @@ img {
     transform: translate(-50%, -50%);
 }
 
-/* .slick-hide-arrow {
-    display: none;
-}
-
-.slick-show-arrow {
-    display: block;
-} */
-
 .darkGray {
     background-color: rgb(11, 11, 11);
 }
@@ -63,3 +55,35 @@ img {
 .lightGray {
     background-color: rgb(41, 40, 40);
 }
+
+/* breadcrumbs component*/
+/* .breadcrumbs {
+    max-width: 1200px;
+    margin: 20px auto;
+} */
+
+.breadcrumbs > *{
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.breadcrumbs .crumb::after {
+    content: "/";
+    margin-left: 10px;
+}
+
+.breadcrumbs .crumb:last-child::after {
+    display: none;
+}
+
+.activeStyles {
+    color: #000
+}
+
+.notActiveStyles {
+    color: #ddd
+}
+
+/* .breadcrumbs .crumb a {
+    color: #ddd
+} */
