added scrollToTop component

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ img {
     @apply hover:underline hover:decoration-textColor-600 hover:decoration-1
 }
 
+.isNavActive {
+    @apply underline decoration-textColor-600 decoration-1
+}
+
 .product-slider-container {
     margin: 0 auto;
     
